remove hidden scrollbar to fix horizontal whitespace at bottom of page

--- a/app/assets/stylesheets/partials/_reset.scss
+++ b/app/assets/stylesheets/partials/_reset.scss
@@ -20,9 +20,9 @@ tr, th, td {
   background: transparent;
 }
 
-html::-webkit-scrollbar {
-  width: 0px;
-}
+// html::-webkit-scrollbar {
+//   width: 0px;
+// }
 
 // prevent selection
 body {
